--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase configuration files
+FIRESTORE_RULES.txt
+FIRESTORE_INDEXES.txt
+INSTRUCCIONES_FIRESTORE.md
+SOLUCION_GALERIA.md
