Agrego Aplicativo Completo

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ FIRESTORE_RULES.txt
 FIRESTORE_INDEXES.txt
 INSTRUCCIONES_FIRESTORE.md
 SOLUCION_GALERIA.md
-VITE_OPENAI_API_KEY=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
+# VITE_OPENAI_API_KEY=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
