--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ VITE_FIREBASE_MEASUREMENT_ID=G-9FC3BFFYLC
 VITE_GEMINI_API_KEY=AIzaSyAuoBy-xeeGs9SPWSCtIloOyHMDYRNn4Zo
 
 
+#VITE_OPENAI_API_KEY=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
