--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "firebase": "^12.5.0",
+    "nanoid": "^5.1.6",
     "openai": "^6.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
